<resources>
    <string name="app_name">Contact List</string>
    <string name="contact_name">Elon Musk</string>
    <string name="phone_number1">+1 (310) 999 99 99</string>
    <string name="phone_number2">+1 (666) 222 22 22</string>
    <string name="contact_email1">elon.musk@gmail.com</string>
    <string name="contact_email2">elon@musk.net</string>
    <string name="contact_description">Genius, Billionaire, Playboy, Philanthropist</string>
    <string name="content_image">contact_photo</string>
    <string name="contact_list_title">Список контактов</string>
    <string name="contact_details_title">Детали контакта</string>
    <string name="contact_birthday">День рождения: %1$s</string>
    <string name="on_notification">Включить напоминания</string>
    <string name="off_notification">Выключить напоминания</string>
    <string name="notification_text">Сегодня день рождения у %1$s</string>
    <string name="notification_channel_name">My channel</string>
    <string-array name="array_months">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>
    <string name="no_permissions_dialog_title">Доступ к контактам</string>
    <string name="no_permissions_dialog_list">Для загрузки списка контактов необходимо разрешение для доступа к контактам</string>
    <string name="no_permissions_dialog_details">Для загрузки информации о контакте необходимо разрешение для доступа к контактам</string>
    <string name="no_permissions_dialog_button">Разрешить</string>
    <string name="snackbar_button">Настройки</string>
    <string name="snackbar_title_list">Требуется разрешение для загрузки списка контактов</string>
    <string name="snackbar_title_details">Требуется разрешение для загрузки информации о контакте</string>
    <string name="search_hint">Найти контакт</string>
    <string name="search_contact_title">Поиск контакта</string>
</resources>